[package]
name = "hermes-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["starry-ABG <johnstarrysky@gmail.com>"]
description = "A Rust client for the Pyth Hermes API"
license = "Apache-2.0"
repository = "https://github.com/starry-ABG/hermes-api-rs"
documentation = "https://docs.rs/hermes-api-rs"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# 如需要 SSE，可以使用 eventsource-client 或 reqwest_eventsource 等
# eventsource-client = "0.5"
